lab1/Test/L1-A-12-79.cmm
struct t215 {
}rze1buafAoT8OfX9Bj [ 1492423619 ] 
;
struct YSsw4WAYVs CZzoS_FG4MGA8y2weNdL ( int zjw4WVXgz 
  ) {
  float waI ;
}
int ;^
struct _xi ;
struct {
};
int ;
struct {
};
struct mdxaydvsuD2dyeyGkf w2sKj4ysNq0Wj ( ) {
  gJl5foZnFxRxWvSYEM ;
  Th7 ;
  if ( zl7cbhM0JPn4SRX7 )   NRTPE0gZcOo ;
else {
{
      dL6eDyS1Uh2SsW3 ;
    }    while ( d )     C7K4 ;

  }
  if ( QMeHWpE )   return guOk1dDp9Xf136Z4B == wrl4xVplmiHc4E_PH9Yz 
    - ni8f * - t [ QqOMSd = IILy1nBEdmpBb_xa5IVD || ZZOxQGLOVE 
    && XyIQ + ixs / j9sUG8tr2CjHLkJymQ ( _ , vf0R0rXI3tBDd6 
    || MB6c < pNCI2f + av7b0xGgGv5izngtL0Q ( jc9otyn_CuD 
    && IVabh > ( uQqOvRkA && BoX <= uKtYGNdgu ) >= 886630704 
    ) * MVZe98fWTZU82in0T ) != 880474331.973749128 . W 
    / ! QQJzc ( ) ] ;

}
int ;
int jWod0gBfiyMfpGElHaL5 ( ) {
  h7j ;
  Uw2Wl0mJw1Vs77H0 ;
  x ;
  f_OK6TlTgkLP6g ;
}
int hOv2mWgZ1x7pWl7 , nVN_2WT9s_QZ3un8n5 

;
int SJR6AlFG3da6NmDqgb1F ( ) {
  int oO4Erui5wGY_ , RPbxjbCK6 , w = Z ;
}
int 
int rUbswZ ( ) {
{
    if ( zLwPnFqnLT )     olae2Q4_v ;
else     if ( u )     WVoix ;


  }}
int kWRCoRTwL64nu14z ( ) {
}
int ;
int ;
int Sjf_HGUu ( int Us8A , int NUHZP ) {
}
